--- a/app/javascript/dashboard/assets/scss/widgets/_login.scss
+++ b/app/javascript/dashboard/assets/scss/widgets/_login.scss
@@ -5,7 +5,7 @@
 // Outside login wrapper
 .login {
   @include full-height;
-  overflow-y: scroll;
+  overflow-y: auto;
   padding-top: $space-larger * 1.2;
 
   .login__hero {
